--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,11 @@ allure {
     report {
         version.set(allureVersion)
     }
-    adapter { // отвечает за появление папочки build/allure-results
-        aspectjWeaver.set(true) //обработка аннотации @Step
+    adapter {
+        aspectjWeaver.set(true)
         frameworks {
-            junit5 { //название фреймворка
-                adapterVersion.set(allureVersion) //версия интеграции фреймворка и Allure
+            junit5 {
+                adapterVersion.set(allureVersion)
             }
         }
     }
@@ -35,6 +35,7 @@ dependencies {
 }
 
 tasks.withType(Test) {
+    systemProperties(System.getProperties())
     useJUnitPlatform()
 
     testLogging {
@@ -45,4 +46,8 @@ tasks.withType(Test) {
     }
 }
 
-test {}
+task form_test(type: Test) {
+    useJUnitPlatform{
+        includeTags "form"
+    }
+}
